Nettoyages des données et création d'une collones de Total

--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -1786,6 +1786,121 @@
     "\n",
     "print('\\nExploration terminée. Voir sorties ci-dessus pour détails.')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24d61062",
+   "metadata": {},
+   "source": [
+    "Nettoyage des données manquantes et de valeurs abérrantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "15a67836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "État initial avant nettoyage:\n",
+      "Nombre de lignes: 525461\n",
+      "Nombre de colonnes: 8\n",
+      "\n",
+      "Doublons exacts supprimés: 6865 lignes\n",
+      "Lignes sans CustomerID supprimées: 107833 lignes\n",
+      "Lignes avec Quantity ≤ 0 supprimées: 9816 lignes\n",
+      "Lignes avec Price ≤ 0 supprimées: 31 lignes\n",
+      "Lignes avec date invalide supprimées: 0 lignes\n",
+      "\n",
+      "NETTOYAGE TERMINÉ\n",
+      "\n",
+      "État final après nettoyage:\n",
+      "Nombre de lignes: 400916\n",
+      "Nombre de colonnes: 9\n",
+      "% de données conservées: 76.3%\n",
+      "\n",
+      "Statistiques après nettoyage:\n",
+      "            Quantity          Price          Total\n",
+      "count  400916.000000  400916.000000  400916.000000\n",
+      "mean       13.767418       3.305826      21.945330\n",
+      "std        97.638385      35.047719      77.758075\n",
+      "min         1.000000       0.001000       0.001000\n",
+      "25%         2.000000       1.250000       5.000000\n",
+      "50%         5.000000       1.950000      12.500000\n",
+      "75%        12.000000       3.750000      19.500000\n",
+      "max     19152.000000   10953.500000   15818.400000\n",
+      "\n",
+      "Valeurs manquantes restantes:\n",
+      "Aucune valeur manquante dans les colonnes critiques \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Créer une copie pour le nettoyage (préserver df original)\n",
+    "df_clean = df.copy()\n",
+    "\n",
+    "print('État initial avant nettoyage:')\n",
+    "print(f'Nombre de lignes: {len(df_clean)}')\n",
+    "print(f'Nombre de colonnes: {len(df_clean.columns)}')\n",
+    "\n",
+    "#Supprimer les doublons identiques\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean.drop_duplicates()\n",
+    "removed_dups = initial_rows - len(df_clean)\n",
+    "print(f'\\nDoublons exacts supprimés: {removed_dups} lignes')\n",
+    "\n",
+    "#Supprimer les lignes avec CustomerID manquant (essentiel pour analyse)\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean[df_clean['Customer ID'].notna()]\n",
+    "removed_missing_customer = initial_rows - len(df_clean)\n",
+    "print(f'Lignes sans CustomerID supprimées: {removed_missing_customer} lignes')\n",
+    "\n",
+    "#Quantité: supprimer les valeurs <= 0 (annulations/erreurs)\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean[df_clean['Quantity'] > 0]\n",
+    "removed_qty_zero = initial_rows - len(df_clean)\n",
+    "print(f'Lignes avec Quantity ≤ 0 supprimées: {removed_qty_zero} lignes')\n",
+    "\n",
+    "#Prix: supprimer les valeurs <= 0 (erreurs)\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean[df_clean['Price'] > 0]\n",
+    "removed_price_zero = initial_rows - len(df_clean)\n",
+    "print(f'Lignes avec Price ≤ 0 supprimées: {removed_price_zero} lignes')\n",
+    "\n",
+    "#Supprimer les dates invalides (après conversion en datetime)\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean[df_clean['InvoiceDate'].notna()]\n",
+    "removed_invalid_date = initial_rows - len(df_clean)\n",
+    "print(f'Lignes avec date invalide supprimées: {removed_invalid_date} lignes')\n",
+    "\n",
+    "#Ajouter colonne Total (Quantity * Price) pour validation\n",
+    "df_clean['Total'] = df_clean['Quantity'] * df_clean['Price']\n",
+    "\n",
+    "#Réinitialiser l'index après tous les filtres\n",
+    "df_clean = df_clean.reset_index(drop=True)\n",
+    "\n",
+    "print(f'\\nNETTOYAGE TERMINÉ')\n",
+    "print(f'\\nÉtat final après nettoyage:')\n",
+    "print(f'Nombre de lignes: {len(df_clean)}')\n",
+    "print(f'Nombre de colonnes: {len(df_clean.columns)}')\n",
+    "print(f'% de données conservées: {(len(df_clean) / len(df)) * 100:.1f}%')\n",
+    "\n",
+    "# Afficher les statistiques des colonnes numériques après nettoyage\n",
+    "print(f'\\nStatistiques après nettoyage:')\n",
+    "print(df_clean[['Quantity', 'Price', 'Total']].describe())\n",
+    "\n",
+    "# Afficher les colonnes manquantes (devrait être minimal)\n",
+    "print(f'\\nValeurs manquantes restantes:')\n",
+    "missing_clean = df_clean.isna().sum()\n",
+    "missing_clean = missing_clean[missing_clean > 0]\n",
+    "if len(missing_clean) > 0:\n",
+    "    display(missing_clean)\n",
+    "else:\n",
+    "    print('Aucune valeur manquante dans les colonnes critiques ')\n"
+   ]
   }
  ],
  "metadata": {
