suppression des outliers

--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "15a67836",
    "metadata": {},
    "outputs": [
@@ -1876,6 +1876,12 @@
     "removed_invalid_date = initial_rows - len(df_clean)\n",
     "print(f'Lignes avec date invalide supprimées: {removed_invalid_date} lignes')\n",
     "\n",
+    "#Supprimer les lignes avec Description manquante\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean[df_clean['Description'].notna()]\n",
+    "removed_missing_desc = initial_rows - len(df_clean)\n",
+    "print(f'Lignes sans Description supprimées: {removed_missing_desc} lignes')\n",
+    "\n",
     "#Ajouter colonne Total (Quantity * Price) pour validation\n",
     "df_clean['Total'] = df_clean['Quantity'] * df_clean['Price']\n",
     "\n",
@@ -1900,6 +1906,83 @@
     "    display(missing_clean)\n",
     "else:\n",
     "    print('Aucune valeur manquante dans les colonnes critiques ')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c77a88d3",
+   "metadata": {},
+   "source": [
+    "Suppression des Outliers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "1f8250b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outliers Price supprimés (IQR method): 0 lignes\n",
+      "Outliers Quantity supprimés (IQR method): 0 lignes\n",
+      "\n",
+      "NETTOYAGE TERMINÉ\n",
+      "\n",
+      "État final après nettoyage:\n",
+      "Nombre de lignes: 318035\n",
+      "Nombre de colonnes: 9\n",
+      "% de données conservées: 60.5%\n",
+      "\n",
+      "Statistiques après nettoyage:\n",
+      "            Quantity         Price          Total\n",
+      "count  318035.000000  318035.00000  318035.000000\n",
+      "mean        7.487868       2.04416      12.337502\n",
+      "std         6.725994       1.24763      12.214109\n",
+      "min         1.000000       0.00100       0.001000\n",
+      "25%         2.000000       1.25000       3.750000\n",
+      "50%         6.000000       1.65000      10.080000\n",
+      "75%        12.000000       2.95000      16.500000\n",
+      "max        27.000000       5.49000     147.150000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Outliers sur Price\n",
+    "Q1_price = df_clean['Price'].quantile(0.25)\n",
+    "Q3_price = df_clean['Price'].quantile(0.75)\n",
+    "IQR_price = Q3_price - Q1_price\n",
+    "lower_price = Q1_price - 1.5 * IQR_price\n",
+    "upper_price = Q3_price + 1.5 * IQR_price\n",
+    "\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean[(df_clean['Price'] >= lower_price) & (df_clean['Price'] <= upper_price)]\n",
+    "removed_price_outliers = initial_rows - len(df_clean)\n",
+    "print(f'Outliers Price supprimés (IQR method): {removed_price_outliers} lignes')\n",
+    "\n",
+    "# Outliers sur Quantity (ex: commandes aberrantes)\n",
+    "Q1_qty = df_clean['Quantity'].quantile(0.25)\n",
+    "Q3_qty = df_clean['Quantity'].quantile(0.75)\n",
+    "IQR_qty = Q3_qty - Q1_qty\n",
+    "lower_qty = Q1_qty - 1.5 * IQR_qty\n",
+    "upper_qty = Q3_qty + 1.5 * IQR_qty\n",
+    "\n",
+    "initial_rows = len(df_clean)\n",
+    "df_clean = df_clean[(df_clean['Quantity'] >= lower_qty) & (df_clean['Quantity'] <= upper_qty)]\n",
+    "removed_qty_outliers = initial_rows - len(df_clean)\n",
+    "print(f'Outliers Quantity supprimés (IQR method): {removed_qty_outliers} lignes')\n",
+    "\n",
+    "print(f'\\nNETTOYAGE TERMINÉ')\n",
+    "print(f'\\nÉtat final après nettoyage:')\n",
+    "print(f'Nombre de lignes: {len(df_clean)}')\n",
+    "print(f'Nombre de colonnes: {len(df_clean.columns)}')\n",
+    "print(f'% de données conservées: {(len(df_clean) / len(df)) * 100:.1f}%')\n",
+    "\n",
+    "# Afficher les statistiques des colonnes numériques après nettoyage\n",
+    "print(f'\\nStatistiques après nettoyage:')\n",
+    "print(df_clean[['Quantity', 'Price', 'Total']].describe())"
    ]
   }
  ],
